--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.welcome"
+    tools:context=".Activities.Welcome"
     android:orientation="vertical"
     android:background="@drawable/welcome_background">
     <LinearLayout
@@ -20,7 +20,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="150dp"
+                android:layout_width="190dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="90dp"
@@ -46,14 +46,6 @@
                 android:onClick="logOnClick"
                 android:text="    ENTRAR    " />
 
-            <Button
-                android:id="@+id/button_cadastrar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/buttonstyle"
-                android:text="CADASTRAR" />
         </LinearLayout>
 
 
