--- a/app/src/main/res/layout/slide.xml
+++ b/app/src/main/res/layout/slide.xml
@@ -28,6 +28,7 @@
                 android:id="@+id/txttitle"
                 android:textStyle="bold"
                 android:textSize="30sp"
+                android:textAlignment="center"
                 android:layout_marginBottom="30dp"
                 android:text="Title Here"
                 android:textColor="#fff"
@@ -36,7 +37,33 @@
             <TextView
                 android:padding="16dp"
                 android:id="@+id/txtdescription"
-                android:textAlignment="center"
+                android:textAlignment="textStart"
+                android:textSize="17sp"
+                android:text="Description is Here"
+                android:textColor="#fff"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_margin="80dp"
+                android:id="@+id/slideimg_subsection"/>
+
+            <TextView
+                android:padding="16dp"
+                android:id="@+id/txttitle_subsection"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:layout_marginBottom="30dp"
+                android:text="Title Here"
+                android:textColor="#fff"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:padding="16dp"
+                android:id="@+id/txtdescription_subsection"
+                android:textAlignment="textStart"
                 android:textSize="17sp"
                 android:text="Description is Here"
                 android:textColor="#fff"
