--- a/app/src/main/res/layout/activity_docs.xml
+++ b/app/src/main/res/layout/activity_docs.xml
@@ -152,6 +152,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
+                        android:onClick="onClickRenda"
                         android:orientation="vertical">
 
                         <ImageView
