--- a/app/src/main/res/layout/activity_docs.xml
+++ b/app/src/main/res/layout/activity_docs.xml
@@ -71,11 +71,13 @@
                 android:orientation="horizontal">
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_relatorioMensal"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="5dp"
                     android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground">
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:onClick="onClickDownloadRelatorioMensal">
 
                     <LinearLayout
                         android:id="@+id/cv_relatorios"
@@ -113,6 +115,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
+                        android:onClick="onClickCheckList"
                         android:orientation="vertical">
 
                         <ImageView
