--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -46,15 +46,15 @@
         android:id="@+id/txt_mail_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="sans-serif"
         android:text="@string/mail"
         android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold|italic"
-        app:layout_constraintEnd_toEndOf="@+id/img_photo_profile"
-        app:layout_constraintStart_toStartOf="@+id/img_photo_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_name_profile" />
 
     <TextView
@@ -100,7 +100,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_back_profile"
         app:layout_constraintVertical_bias="0.093"
-        app:srcCompat="@drawable/pontuacao_background_profile" />
+        app:srcCompat="@drawable/gradienteditext" />
 
     <TextView
         android:id="@+id/txtx_pontuacao_profile"
@@ -108,6 +108,7 @@
         android:layout_height="wrap_content"
         android:text="0"
         android:textAlignment="center"
+        android:textColor="@color/backgroundcolor"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView4"
@@ -204,5 +205,21 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/btn_forum"
+        android:layout_width="300dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/gradienteditext"
+        android:drawableStart="@drawable/logosemfundo24dp"
+        android:fontFamily="monospace"
+        android:onClick="onClickForumProfile"
+        android:text="FORUM  "
+        android:textColor="@color/backgroundcolor"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
