--- a/app/src/main/res/layout/expanded_profile.xml
+++ b/app/src/main/res/layout/expanded_profile.xml
@@ -46,13 +46,13 @@
         android:id="@+id/txt_mail_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/capriola"
         android:text="@string/mail"
         android:textAlignment="center"
         android:textStyle="bold|italic"
-        app:layout_constraintEnd_toEndOf="@+id/img_photo_profile"
-        app:layout_constraintStart_toStartOf="@+id/img_photo_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_name_profile" />
 
     <TextView
