Fixed delete comments

--- a/app/src/main/res/layout/comment_view_holder.xml
+++ b/app/src/main/res/layout/comment_view_holder.xml
@@ -35,17 +35,15 @@
         android:id="@+id/comment_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/edittext_button_style_rounded"
         android:text="Text Comment Goes Here"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/comment_user_img"
+        app:layout_constraintEnd_toStartOf="@+id/btn_delete_comment"
+        app:layout_constraintStart_toStartOf="@+id/comment_user_img"
         app:layout_constraintTop_toBottomOf="@+id/comment_username"
         app:layout_constraintVertical_bias="0.375" />
 
@@ -64,13 +62,15 @@
         app:layout_constraintStart_toEndOf="@+id/comment_username"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/deletartxtComment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Deslize para deletar"
-        android:textColor="@color/design_default_color_error"
-        android:textSize="10sp"
+    <Button
+        android:id="@+id/btn_delete_comment"
+        android:layout_width="24dp"
+        android:layout_height="21dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/delete"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/comment_content" />
+        app:layout_constraintTop_toBottomOf="@+id/comment_date"
+        app:layout_constraintVertical_bias="0.676" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
