--- a/app/src/main/res/layout/activity_requirements_check_list.xml
+++ b/app/src/main/res/layout/activity_requirements_check_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
-    tools:context=".Activities.RequirementsCheckListActivity"
+    tools:context=".activities.docs.RequirementsCheckListActivity"
     android:padding="15dp">
 
 
