--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="darkblue">#23283a</color>
     <color name="testcolorblue">#152b38</color>
     <color name="pink">#fe104d</color>
-    <color name="white">#fff</color>
+    <color name="white">#FFFFFF</color>
 
     <color name="lightorange">#fdf2df</color>
     <color name="lightorangedark">#ebd6ab</color>
