--- a/app/src/main/res/layout/activity_check_list_profile.xml
+++ b/app/src/main/res/layout/activity_check_list_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.CheckListProfileActivity"
+    tools:context=".activities.profile.CheckListProfileActivity"
     android:background="@color/lightgray"
     android:padding="15dp">
 
