--- a/app/src/main/res/layout/activity_comp_renda.xml
+++ b/app/src/main/res/layout/activity_comp_renda.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.CompRendaActivity">
+    tools:context=".activities.docs.CompRendaActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -13,7 +13,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView"
@@ -26,7 +27,7 @@
 
             <Button
                 android:id="@+id/btn_renda_autonomos"
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/pontuacao_background"
@@ -37,7 +38,7 @@
 
             <Button
                 android:id="@+id/btn_comp_renda"
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/pontuacao_background"
@@ -48,7 +49,7 @@
 
             <Button
                 android:id="@+id/btn_socioeconomica"
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/pontuacao_background"
