--- a/app/src/main/res/layout/activity_forum.xml
+++ b/app/src/main/res/layout/activity_forum.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activities.ForumActivity">
+    tools:context=".activities.profile.ForumActivity">
 
     <Button
         android:id="@+id/buttonAddForum"
