--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Activities.LoginActivity">
+    tools:context=".activities.welcome.LoginActivity">
 
     <ImageView
         android:id="@+id/login_photo"
