--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="5dp"
-    tools:context=".Activities.MainActivity">
+    tools:context=".activities.welcome.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
