--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center"
     android:background="@color/cardview_dark_background"
     android:fitsSystemWindows="true"
-    tools:context=".Activities.ResetPasswordActivity">
+    tools:context=".activities.welcome.ResetPasswordActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
