--- a/app/src/main/res/layout/activity_experiences_main.xml
+++ b/app/src/main/res/layout/activity_experiences_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ExperiencesMainActivity"
+    tools:context=".activities.info.ExperiencesMainActivity"
     android:background="@color/colorPrimaryDark">
 
     <TextView
