--- a/app/src/main/res/layout/pop_up_add_experience.xml
+++ b/app/src/main/res/layout/pop_up_add_experience.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     >
@@ -89,7 +88,7 @@
 
     <ProgressBar
         android:padding="4dp"
-        android:id="@+id/popup_progressBar"
+        android:id="@+id/popup_progressBar_experience"
         style="@android:style/Widget.Holo.Light.ProgressBar.Small"
         android:layout_width="56dp"
         android:layout_height="56dp"
