--- a/app/src/main/res/layout/pop_up_add_experience.xml
+++ b/app/src/main/res/layout/pop_up_add_experience.xml
@@ -50,7 +50,7 @@
         android:ems="10"
         android:gravity="start"
         android:hint="Nos conte como foi !"
-        android:inputType="text"
+        android:inputType="textMultiLine|text"
         android:textAlignment="viewStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -68,7 +68,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/popup_desc_experience"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        tools:srcCompat="@tools:sample/backgrounds/scenic[14]" />
 
     <ImageView
 
@@ -100,5 +100,17 @@
         app:layout_constraintEnd_toEndOf="@+id/popup_add_experience"
         app:layout_constraintStart_toStartOf="@+id/popup_add_experience"
         app:layout_constraintTop_toTopOf="@+id/popup_add_experience" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="163dp"
+        android:layout_height="18dp"
+        android:text="Escolha uma Imagem"
+        android:textColor="@color/backgroundcolor"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/popup_img_experience"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/popup_img_experience"
+        app:layout_constraintTop_toTopOf="@+id/popup_img_experience" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
