--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,8 +5,19 @@
     android:id="@+id/constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/welcome_background"
+    android:background="@color/white"
     tools:context=".activities.profile.ProfileActivity">
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="379dp"
+        android:layout_height="252dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_back_profile"
+        app:srcCompat="@drawable/popup_edittext_style" />
 
     <ImageView
         android:id="@+id/img_back_profile"
@@ -46,11 +57,11 @@
         android:id="@+id/txt_mail_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="sans-serif"
         android:text="@string/mail"
         android:textAlignment="center"
-        android:textColor="@color/backgroundcolor"
+        android:textColor="@android:color/tertiary_text_light"
         android:textSize="18sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,15 +76,15 @@
         android:fontFamily="sans-serif"
         android:text="@string/ready"
         android:textAlignment="center"
-        android:textColor="@color/backgroundcolor"
+        android:textColor="@android:color/tertiary_text_light"
         android:textSize="18sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_back_profile"
-        app:layout_constraintVertical_bias="0.689" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_mail_profile"
+        app:layout_constraintVertical_bias="0.075" />
 
     <TextView
         android:id="@+id/txt_name_profile"
@@ -84,7 +95,7 @@
         android:fontFamily="sans-serif"
         android:text="@string/name"
         android:textAlignment="center"
-        android:textColor="@color/backgroundcolor"
+        android:textColor="@android:color/tertiary_text_light"
         android:textSize="18sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="@+id/img_photo_profile"
@@ -103,7 +114,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_back_profile"
         app:layout_constraintVertical_bias="0.093"
-        app:srcCompat="@drawable/gradienteditext" />
+        app:srcCompat="@drawable/reg_edittext_style" />
 
     <TextView
         android:id="@+id/txtx_pontuacao_profile"
@@ -111,7 +122,7 @@
         android:layout_height="wrap_content"
         android:text="0"
         android:textAlignment="center"
-        android:textColor="@color/backgroundcolor"
+        android:textColor="@android:color/tertiary_text_light"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView4"
@@ -127,7 +138,7 @@
         android:fontFamily="sans-serif"
         android:text="Pontos"
         android:textAlignment="center"
-        android:textColor="@color/backgroundcolor"
+        android:textColor="@android:color/tertiary_text_light"
         android:textSize="18sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="@+id/imageView4"
@@ -145,7 +156,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/carviewVideos"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_mail_profile">
+        app:layout_constraintTop_toBottomOf="@+id/imageButton">
 
         <LinearLayout
             android:id="@+id/cv_checList_profile"
@@ -214,7 +225,6 @@
         android:id="@+id/btn_forum"
         android:layout_width="300dp"
         android:layout_height="48dp"
-        android:layout_marginTop="40dp"
         android:background="@drawable/gradienteditext"
         android:drawableStart="@drawable/logosemfundo24dp"
         android:fontFamily="monospace"
@@ -222,6 +232,7 @@
         android:text="FORUM  "
         android:textColor="@color/backgroundcolor"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
