--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,17 +8,6 @@
     android:background="@color/white"
     tools:context=".activities.profile.ProfileActivity">
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="379dp"
-        android:layout_height="252dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_back_profile"
-        app:srcCompat="@drawable/popup_edittext_style" />
-
     <ImageView
         android:id="@+id/img_back_profile"
         android:layout_width="425dp"
@@ -73,18 +62,17 @@
         android:id="@+id/txt_ready"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif"
         android:text="@string/ready"
         android:textAlignment="center"
         android:textColor="@android:color/tertiary_text_light"
         android:textSize="18sp"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_mail_profile"
-        app:layout_constraintVertical_bias="0.075" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_mail_profile" />
 
     <TextView
         android:id="@+id/txt_name_profile"
@@ -156,7 +144,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/carviewVideos"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton">
+        app:layout_constraintTop_toBottomOf="@+id/txt_ready">
 
         <LinearLayout
             android:id="@+id/cv_checList_profile"
