--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -32,7 +32,7 @@
         <LinearLayout
             android:id="@+id/l2"
             android:layout_width="wrap_content"
-            android:layout_height="1080px"
+            android:layout_height="fill_parent"
             android:background="@drawable/spaceullustration"
             android:orientation="vertical">
 
